tests/baselines/reference/ClassAndModuleThatMergeWithModulesExportedStaticFunctionUsingClassPrivateStatics.types
=== tests/cases/conformance/internalModules/DeclarationMerging/ClassAndModuleThatMergeWithModulesExportedStaticFunctionUsingClassPrivateStatics.ts ===
class clodule<T> {
>clodule : clodule<T>
>T : T

    id: string;
>id : 文字
>类型别名 :=> 文字

    value: T;
>value : T
>T : T

    private static sfn(id: string) { return 42; }
>sfn : (id: 文字) => 数字
>id : 文字
>类型别名 :=> 文字
>42 : 42
}

module clodule {
>clodule : 类为 clodule

    // error: duplicate identifier expected
    export function fn<T>(x: T, y: T): number {
>fn : <T>(x: T, y: T) => 数字
>T : T
>x : T
>T : T
>y : T
>T : T

        return clodule.sfn('a');
>clodule.sfn('a') : 数字
>类型别名 :=> 数字
>clodule.sfn : (id: 文字) => 数字
>clodule : 类为 clodule
>sfn : (id: 文字) => 数字
>'a' : "a"
    }
}


